# bksteamv2

./: .env  README.md  docker-compose.yml
backend/: .coverage  Dockerfile  alembic.ini  main.py  pyproject.toml  serverless.yml
backend/config/: setting.py
backend/core/: api.py
backend/core/endpoints/: BK WEB_HỌC VIÊN - HV.csv  audio.py  auth.py  classroom.py  csv.py  home_work.py  home_work_file.py  home_work_file_result.py  home_work_result.py  image.py  import.py  import_data.py  roll_call.py  score.py  self_learning.py  slide.py  student.py  teacher.py  unit.py
backend/db/: sql_01.sql  sql_02.sql
backend/langs/: jfga.en.yml  jfga.ja.yml
backend/models/: audio.py  base.py  classroom.py  file_base.py  home_work.py  home_work_file.py  home_work_file_result.py  home_work_result.py  image.py  member.py  notification.py  roll_call.py  score.py  self_learning.py  student.py  teacher.py  unit.py
backend/schemas/: audio.py  classroom.py  home_work.py  home_work_file.py  home_work_file_result.py  home_work_result.py  image.py  login.py  notification.py  roll_call.py  score.py  self_learning.py  slide.py  student.py  teacher.py  token.py  unit.py
backend/tasks/: import.py  import_data.py
backend/tests/: conftest.py
backend/tests/endpoints/: test_unit.py
backend/utils/: csv.py
frontend/: .eslintrc.js  Dockerfile  package-lock.json  package.json  serverless.yml  tsconfig.json  vue.config.js
frontend/src/: App.vue  main.ts
frontend/src/components/: index.js
frontend/src/locale/: ja.json
frontend/src/plugins/: axios.ts  i18n.ts  index.ts
(+48 files in other folders)
